[project]
name = "whiterabbit"
description = "A nodepack designed to help you work with video from within ComfyUI."
version = "1.0.0"
license = {file = "LICENSE"} 
classifiers = [
     "Operating System :: OS Independent",
     "Environment :: GPU :: NVIDIA CUDA",
]

dependencies = ["torchlanc"]

[project.urls]
Repository = "https://github.com/Artificial-Sweetener/comfyui-WhiteRabbit"
Documentation = "https://github.com/Artificial-Sweetener/comfyui-WhiteRabbit/wiki"
"Bug Tracker" = "https://github.com/Artificial-Sweetener/comfyui-WhiteRabbit/issues"

[tool.comfy]
PublisherId = "artificialsweetener"
DisplayName = "WhiteRabbit"
Icon = ""
includes = [] 